tests/invalid/simple/VarDecl_CompileFail_4.whiley
void System::main([string] args):
    x = y
    print str(x)
